fix(image-viewer): set z-index to make clickable

--- a/public/style/scss/_image-slider.scss
+++ b/public/style/scss/_image-slider.scss
@@ -62,6 +62,7 @@
   @include abs-pos(0.5em, 0.5em);
   @include button-with-transparency;
   font-size: 2.25em;
+  z-index: 100;
 }
 
 /* Custom Image Slider CSS */
